--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,364 @@
+/*###################################################*/
+/*...................................................*/
+/* root variables (responsive font size installed)   */
+/*...................................................*/
+/*###################################################*/
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* font size */
+  --fs-b: 14px;
+  /* custom colors */
+  --smartRed: hsla(346, 61%, 29%, 1.0);
+  --smartBlue: hsla(217, 67%, 21%, 1.0);
+  --smartGreen: hsla(170, 100%, 16%, 1.0);
+  --smartYellow: hsla(37, 35%, 50%, 1.0);
+  /* custom mono */
+  --smartRedMono: hsla(346, 30%, 41%, 1.0);
+  --smartBlueMono: hsla(217, 33%, 32%, 1.0);
+  --smartGreenMono: hsla(172, 50%, 29%, 1.0);
+  --smartYellowMono: hsla(37, 25%, 60%, 1.0);
+  /* custom mono UP */
+  --smartRedMonoUp: hsla(346, 90%, 19%, 1.0);
+  --smartBlueMonoUp: hsla(217, 94%, 12%, 1.0);
+  --smartGreenMonoUp: hsla(172, 100%, 29%, 1.0);
+  --smartYellowMonoUp: hsla(37, 45%, 40%, 1.0);
+  /* theme colors */
+  --background: hsla(0, 0%, 96%, 1.0);
+  --backgroundMono: hsla(0, 0%, 90%, 1.0);
+  --text: hsla(0, 0%, 0%, 1.0);
+  --primary: hsla(37, 35%, 50%, 1.0);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --navHeight: 14vh;
+  --navMenu-height: 5rem;
+  --cardBackgroundColor: hsla(0, 4%, 91%, 1.0);
+  --cardBackgroundColorGold: hsla(37, 28%, 81%, 1.0);
+   --cardCurve: 15px;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* tablet up */
+@media (min-width: 768px) {
+  :root {
+      /* font size */
+      --fs-b: 16px;
+  }
+}
+
+/* end tablet up */
+
+/* laptop up */
+@media (min-width: 991px) {
+  :root {
+      /* font size */
+      --fs-b: 18px;
+  }
+}
+
+/* end laptop up */
+
+/* desktop up */
+@media (min-width: 1300px) {
+  :root {
+      /* font size */
+      --fs-b: 22px;
+  }
+}
+
+/*###################################################*/
+/*...................................................*/
+/* end root variables                                */
+/*...................................................*/
+/*###################################################*/
+
+
+/*###################################################*/
+/*...................................................*/
+/* general properties */
+/*...................................................*/
+/*###################################################*/
+
+html {
+  /* scroll smooth from nav control */
+  scroll-behavior: smooth;
+  /* distance from scroll */
+  scroll-padding-top: 200px;
+  /* font size general control using variable */
+  font-size: var(--fs-b);
+  /* Oficial SMART font-family   */
+  font-family: 'Inter Variable', sans-serif;
+  /* protection against overflow movement due to animations */
+  overflow-x: hidden;
+  /* Size of elements wont be affected by paddings or margins */
+  box-sizing: border-box;
+
+}
+
+
+body { 
+  background-color: var(--background);
+  color: var(--text);
+  margin: 0;
+  padding: 0;
+}
+
+/* adjusting and centering max with of sections */
+body>#root>section {
+  max-width: 1824px;
+  margin: 2rem auto !important;
+  float: none !important;
+}
+
+/* when the navBar (iPad portrait up) is contracted the root variable must be redefined */
+body.navIsContracted {
+ --navHeight: 6.5vh;
+}
+
+/*-------------------------------*/
+/* margins */
+/*-------------------------------*/
+
+.m-0 {
+  margin: 0;
+}
+
+.m-1 {
+  margin: 1rem;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+/* ---top--- */
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 4rem;
+}
+
+/* ---end top--- */
+
+/* ---bottom--- */
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
+/* ---end bottom--- */
+
+/* ---left--- */
+.ml-1 {
+  margin-left: 1rem;
+}
+
+.ml-2 {
+  margin-left: 2rem;
+}
+
+.ml-3 {
+  margin-left: 3rem;
+}
+
+.ml-4 {
+  margin-left: 4rem;
+}
+
+/* ---end left--- */
+
+/* ---right--- */
+.mr-1 {
+  margin-right: 1rem;
+}
+
+.mr-2 {
+  margin-right: 2rem;
+}
+
+.mr-3 {
+  margin-right: 3rem;
+}
+
+.mr-4 {
+  margin-right: 4rem;
+}
+
+/* ---end right--- */
+
+/*-------------------------------*/
+/* end margins */
+/*-------------------------------*/
+
+/*-------------------------------*/
+/* paddings */
+/*-------------------------------*/
+
+.p-0 {
+  padding: 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.p-4 {
+  padding: 4rem;
+}
+
+/* ---top--- */
+.pt-1 {
+  padding-top: 1rem;
+}
+
+.pt-2 {
+  padding-top: 2rem;
+}
+
+.pt-3 {
+  padding-top: 3rem;
+}
+
+.pt-4 {
+  padding-top: 4rem;
+}
+
+/* ---end top--- */
+
+/* ---bottom--- */
+.pb-1 {
+  padding-bottom: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 2rem;
+}
+
+.pb-3 {
+  padding-bottom: 3rem;
+}
+
+.pb-4 {
+  padding-bottom: 4rem;
+}
+
+/* ---end bottom--- */
+
+/* ---left--- */
+.pl-1 {
+  padding-left: 1rem;
+}
+
+.pl-2 {
+  padding-left: 2rem;
+}
+
+.pl-3 {
+  padding-left: 3rem;
+}
+
+.pl-4 {
+  padding-left: 4rem;
+}
+
+/* ---end left--- */
+
+/* ---right--- */
+.pr-1 {
+  padding-right: 1rem;
+}
+
+.pr-2 {
+  padding-right: 2rem;
+}
+
+.pr-3 {
+  padding-right: 3rem;
+}
+
+.pr-4 {
+  padding-right: 4rem;
+}
+
+/* ---end right--- */
+
+/*-------------------------------*/
+/* end paddings */
+/*-------------------------------*/
+
+/*-------------------------------*/
+/* special styles */
+/*-------------------------------*/
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Libre Baskerville', serif;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  all: unset;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
 }
+
+hr {
+border: none;
+height: 2px;
+background-color: rgb(194, 189, 189);
+border-radius: 5px;
+
+}
+
+
+
+/*-------------------------------*/
+/* end special styles */
+/*-------------------------------*/
+
+
+
+
+/*###################################################*/
+/*...................................................*/
+/* end general properties */
+/*...................................................*/
+/*###################################################*/
