--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -3,8 +3,37 @@
 /* Home(component) */
 /*...................................................*/
 /*###################################################*/
+.homeLayout{
+
+}
+/*-------------------------------*/
+/* video */
+/*-------------------------------*/
 
 
+
+/*-------------------------------*/
+/* end video */
+/*-------------------------------*/
+
+/*-------------------------------*/
+/* description */
+/*-------------------------------*/
+
+.description {
+  padding:1rem;
+}
+.description p {
+   text-align:justify;
+}
+
+.accentText{
+    color: var(--contrastMono)
+}
+
+/*-------------------------------*/
+/* end description */
+/*-------------------------------*/
 
 /*###################################################*/
 /*...................................................*/
