--- a/src/pages/partners/Partners.module.css
+++ b/src/pages/partners/Partners.module.css
@@ -4,7 +4,13 @@
 /*...................................................*/
 /*###################################################*/
 
-
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    padding: 1rem;
+    padding-bottom: 5rem;
+  }
 
 /*###################################################*/
 /*...................................................*/
