My profile section

--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -4,7 +4,17 @@
 /*...................................................*/
 /*###################################################*/
 
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    min-height: 80vh;
+}
 
+.container p{
+    text-align: center;
+}
 
 /*###################################################*/
 /*...................................................*/
