--- a/src/pages/info/Info.module.css
+++ b/src/pages/info/Info.module.css
@@ -6,8 +6,9 @@
 
 .privacyNotice{
     padding: 1rem;
-    color: var(--backgroundMono);
+    color: var(--text);
     padding-bottom: 5rem;
+    opacity: 0.5;
 }
 
 .privacyNotice p{
