--- a/src/components/navMenu/navMenu.module.css
+++ b/src/components/navMenu/navMenu.module.css
@@ -29,15 +29,15 @@ nav[data-type="mobile"] {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    gap: 5px;
-    padding: 1rem;
+    gap: 0.6rem;
+    padding: 1rem 0.8rem;
     min-width: 3rem;
     font-size: 0.8rem;
+    text-align: center;
   }
   
   nav[data-type="mobile"] .item:hover {
-    background-color: var(--primary);
-    color: var(--smartBlue);
+    background-color: var(--contrast);
   }
   
   /*-------------------------------*/
