--- a/src/pages/key/Key.module.css
+++ b/src/pages/key/Key.module.css
@@ -4,8 +4,36 @@
 /*...................................................*/
 /*###################################################*/
 
+.keyLayout{
+    width: 100%;
+    min-height: calc(100vh - (var(--navMenu-height) *3 ));
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-image: url('/images/key.webp') ;
+    background-size: cover;
+    background-position: top;
+    padding-bottom: 5rem;
+    overflow-y: hidden;
+    
+}
 
+.content{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
 
+.content button{
+    all: unset;
+    font-size: 1.4rem;
+    background-color: var(--contrast);
+    padding: 1rem;
+    border-radius: var(--cardCurve);
+}
 /*###################################################*/
 /*...................................................*/
 /* end key(component) */
